ref: correct vertical align for header menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -56,6 +56,7 @@
 
 .menu{
 padding: 0 rem(10);
+	margin: auto;
 
 	&__body{
 		@media (max-width: $mobile){
